--- a/src/views/word/index.css
+++ b/src/views/word/index.css
@@ -46,7 +46,7 @@ body {
 }
 .action-conteiner button {
   background-color: white;
-  color: black;
+  color: rgb(0, 0, 0);
   border: 2px solid #77afde;
 }
 
