--- a/src/views/word/index.css
+++ b/src/views/word/index.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
 }
 .word {
+  position: relative;
   background-color: rgb(240, 240, 247);
 
   width: 100%;
@@ -13,6 +14,12 @@ body {
   top: 0;
   width: 100%;
   height: 50%;
+}
+.Nube {
+  position: absolute;
+  z-index: 5;
+  width: 150px;
+  height: 150px;
 }
 .word__earth {
   background-color: saddlebrown;
@@ -34,7 +41,9 @@ body {
 .action-conteiner {
   width: 250px;
   height: 1000px;
+  z-index: 6;
   display: flex;
+  position: fixed;
   flex-direction: column;
   align-items: center;
 }
